@@ -86,9 +86,9 @@ CAMLexport char_os * caml_get_stdlib_location(void)
   return stdlib;
 }
 
-CAMLexport char_os * caml_parse_ld_conf(void)
+static char_os * parse_ld_conf(const char_os *location)
 {
-  char_os * stdlib, * ldconfname, * wconfig, * p, * q;
+  char_os * ldconfname, * wconfig, * p, * q;
   char * config;
 #ifdef _WIN32
   struct _stati64 st;
@@ -97,8 +97,7 @@ CAMLexport char_os * caml_parse_ld_conf(void)
 #endif
   int ldconf, nread;
 
-  stdlib = caml_get_stdlib_location();
-  ldconfname = caml_stat_strconcat_os(3, stdlib, T("/"), LD_CONF_NAME);
+  ldconfname = caml_stat_strconcat_os(3, location, CAML_DIR_SEP, LD_CONF_NAME);
   if (stat_os(ldconfname, &st) == -1) {
     caml_stat_free(ldconfname);
     return NULL;
@@ -128,6 +127,39 @@ CAMLexport char_os * caml_parse_ld_conf(void)
   close(ldconf);
   caml_stat_free(ldconfname);
   return wconfig;
+}
+
+CAMLexport char_os ** caml_parse_ld_conf(void)
+{
+  char_os * env_value;
+  char_os * locations[3] = {T(""), T(""), NULL};
+  char_os ** buffer, ** tofree;
+  int i, file_count = 0;
+
+  /* Read $OCAMLLIB */
+  env_value = caml_secure_getenv(T("OCAMLLIB"));
+  if (env_value != NULL && strlen_os(env_value) > 0)
+    locations[file_count++] = caml_stat_strdup_os(env_value);
+  /* Add $CAMLLIB if set and not equal to $OCAMLLIB */
+  env_value = caml_secure_getenv(T("CAMLLIB"));
+  if (env_value != NULL && strlen_os(env_value) > 0
+      && strcmp_os(env_value, locations[0]))
+    locations[file_count++] = caml_stat_strdup_os(env_value);
+  /* Add OCAML_STDLIB_DIR if not equal to either */
+  if (strcmp_os(OCAML_STDLIB_DIR, locations[0])
+      || strcmp_os(OCAML_STDLIB_DIR, locations[1]))
+    locations[file_count++] = caml_stat_strdup_os(OCAML_STDLIB_DIR);
+
+  tofree = buffer = caml_stat_alloc((file_count + 1) * sizeof(char_os *));
+  /* Load and parse all the ld.conf files */
+  for (i = 0; i < file_count; i++) {
+    if ((*tofree = parse_ld_conf(locations[i])) != NULL)
+      tofree++;
+    caml_stat_free(locations[i]);
+  }
+  *tofree = NULL;
+
+  return buffer;
 }
 
 /* Open the given shared library and add it to shared_libs.
@@ -164,7 +196,7 @@ void caml_build_primitive_table(char_os * lib_path,
                                 char_os * libs,
                                 char * req_prims)
 {
-  char_os * tofree1, * tofree2;
+  char_os * tofree1, ** tofree2, ** tofree3;
   char_os * p;
   char * q;
 
@@ -172,13 +204,15 @@ void caml_build_primitive_table(char_os * lib_path,
      - directories specified on the command line with the -I option
      - directories specified in the CAML_LD_LIBRARY_PATH
      - directories specified in the executable
+     - directories specified in OCAMLLIB/ld.conf
+     - directories specified in CAMLLIB/ld.conf
      - directories specified in the file <stdlib>/ld.conf */
   tofree1 = caml_decompose_path(&caml_shared_libs_path,
                                 caml_secure_getenv(T("CAML_LD_LIBRARY_PATH")));
   if (lib_path != NULL)
     for (p = lib_path; *p != 0; p += strlen_os(p) + 1)
       caml_ext_table_add(&caml_shared_libs_path, p);
-  tofree2 = caml_parse_ld_conf();
+  tofree3 = tofree2 = caml_parse_ld_conf();
   /* Open the shared libraries */
   caml_ext_table_init(&shared_libs, 8);
   if (libs != NULL)
@@ -200,7 +234,9 @@ void caml_build_primitive_table(char_os * lib_path,
   }
   /* Clean up */
   caml_stat_free(tofree1);
-  caml_stat_free(tofree2);
+  while (*tofree2 != NULL)
+    caml_stat_free(*tofree2++);
+  caml_stat_free(tofree3);
   caml_ext_table_free(&caml_shared_libs_path, 0);
 }
 
